# fee

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routes/v1/: __init__.py  captcha.py  chat.py  login.py  user.py
app/api/routes/v2/: __init__.py  test.py
app/core/: config.py
app/db/: database.py  main.py  postgres_client.py  redis_client.py  tables.py
app/models/: token.py  users.py
app/models/db_models/: chat.py  tables.py  user.py
app/models/request/: chat.py  user.py
app/models/response/: __init__.py  chat.py  user.py
app/service/: create.py  select.py  user.py
app/services/: chat_service.py  user_service.py
app/utils/: email.py  model.py  security.py  token.py
docker/: docker-compose.yaml
