[project]
name = "fee"
version = "0.1.0"
description = "backend for fee"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "sqlmodel>=0.0.24",
]

