[project]
name = "fee"
version = "0.1.0"
description = "backend for fee"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.115.11",
    "jwt>=1.3.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "redis>=5.2.1",
    "sqlmodel>=0.0.24",
]

