[project]
name = "fee"
version = "0.1.0"
description = "backend for fee"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "captcha>=0.7.1",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.11",
    "jwt>=1.3.1",
    "loguru>=0.7.3",
    "openai>=1.79.0",
    "passlib>=1.7.4",
    "pillow>=11.1.0",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "python-jose>=3.4.0",
    "redis>=5.2.1",
    "sqlmodel>=0.0.24",
    "sse-starlette>=2.3.3",
]

